# music-player

./: .dockerignore  .gitignore  README.md
godot/: extension_list.cfg  music-player.gdextension  music-player.gdextension.uid  project.godot
godot/assets/audio/: Toby Fox - Dogsong.flac
godot/assets/sprites/sprite_files/: music_player_logo.aseprite  play_botton.aseprite  skip_n_rewind-backwards.aseprite  skip_n_rewind.aseprite
godot/scenes/: audio_singleton.tscn  main.tscn  player.tscn
rust/: Cargo.toml  build.sh  rust-toolchain.toml
rust/.cargo/: config.toml
rust/src/: audio_playback.rs  audio_singleton.rs  lib.rs  player.rs
