[package]
name = "music-player"
version = "0.0.1"
edition = "2024"
description = "a (hopefully) stylish, functional, and slop-free music player"
readme = "../README.md"
repository = "https://github.com/cut-the-freakin-steak/music-player"
license = "OSL-3.0"

[lib]
crate-type = [
  "cdylib",
  "staticlib",
]  # compile this crate to a dynamic C library (with staticlib fallback for wasm)

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext.git", branch = "master", features = [
  "api-custom",
  # "experimental-threads",
  "experimental-wasm",
  "lazy-function-tables",
] }
multitag = "0.4.3"
rodio = "0.22.2"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread"] }

[lints.clippy]
needless_return = "allow"
pedantic = { level = "warn", priority = -1 }
redundant_closure = "allow"

[lints.rust]
non_snake_case = "allow"
unexpected_cfgs = "allow"
